--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "Application,CommonWebview"
+ext.developModule = "LibViewExt,CommonWebview"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
