dialog 弹出兼容依赖页面关闭、Toast 兼容调用后立即关闭页面

--- a/BaseDebug/src/main/AndroidManifest.xml
+++ b/BaseDebug/src/main/AndroidManifest.xml
@@ -104,6 +104,11 @@
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:theme="@style/AAF.ActivityTheme.Alpha" />
 
+        <activity
+            android:name="com.bihe0832.android.base.debug.toast.DebugToastActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:theme="@style/AAF.ActivityTheme.Alpha" />
+
     </application>
 
 </manifest>
