--- a/config.gradle
+++ b/config.gradle
@@ -1,3 +1,5 @@
+apply from: rootDir.toString() + '/dependencies_aaf_config.gradle'
+
 ext {
     //Android编译SDK版本
     compileSdkVersion = 32
@@ -16,44 +18,10 @@ ext {
     //Android 构建包时是否混淆代码
     minifyEnabled = true
 
-    //使用kotlin版本
-    kotlin_version = '1.7.10'
-    kotlinx_coroutines_version = "1.6.3"
-
-    glide_version = "4.13.2"
-    gson_version = "2.8.2"
-
-    androidsupport = [
-            viewpager          : 'androidx.viewpager:viewpager:1.0.0',
-            appcompat          : 'androidx.appcompat:appcompat:1.5.0',
-            androidxcore       : 'androidx.core:core:1.8.0',
-            constraintlayout   : 'androidx.constraintlayout:constraintlayout:2.1.4',
-            annotation         : 'androidx.annotation:annotation:1.3.0',
-            multidex           : 'androidx.multidex:multidex:2.0.1',
-
-            recyclerview       : 'androidx.recyclerview:recyclerview:1.2.1',
-            swiperefreshlayout : 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0',
-
-
-            // ViewModel
-            lifecycle_viewmodel: 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1',
-            // LiveData
-            lifecycle_livedata : 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1',
-            // Lifecycles only (without ViewModel or LiveData)
-            lifecycle          : 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1',
-            lifecyclecommon    : 'androidx.lifecycle:lifecycle-common-java8:2.5.1',
-            lifecycleprocess   : 'androidx.lifecycle:lifecycle-process:2.4.1',
-
-
-    ]
-    //签名信息
-    signingConfigs = [
-            keyAlias        : 'androiddebugkey',
-            keyPassword     : 'android',
-            storeFile       : "./../debug.keystore",
-            storePassword   : 'android',
-            v1SigningEnabled: true,
-            v2SigningEnabled: true,
+    pickFirstList = ['lib/arm64-v8a/libc++_shared.so',
+                     'lib/armeabi-v7a/libc++_shared.so',
+                     'lib/x86_64/libc++_shared.so',
+                     'lib/x86/libc++_shared.so',
     ]
 
     excludeList = [
@@ -65,4 +33,20 @@ ext {
     doNotStripList = [
             "*/armeabi-v7a/*.so"
     ]
+
+    ndk_abiFilters = "armeabi-v7a,arm64-v8a"
+
+
+    //签名信息
+    signingConfigs = [
+            keyAlias        : 'androiddebugkey',
+            keyPassword     : 'android',
+            storeFile       : "./../debug.keystore",
+            storePassword   : 'android',
+            v1SigningEnabled: true,
+            v2SigningEnabled: true,
+    ]
+
+    //使用kotlin版本
+    kotlin_version = '1.7.10'
 }
