主题、资源、主色调梳理

--- a/Framework/src/main/AndroidManifest.xml
+++ b/Framework/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
 
     <application
         android:usesCleartextTraffic="true"
+        android:theme="@style/AAF.ActivityTheme"
         tools:ignore="GoogleAppIndexingWarning">
 
         <uses-library
