--- a/config.gradle
+++ b/config.gradle
@@ -18,33 +18,27 @@ ext {
     //Android 构建包时是否混淆代码
     minifyEnabled = true
 
-    pickFirstList = ['lib/arm64-v8a/libc++_shared.so',
-                     'lib/armeabi-v7a/libc++_shared.so',
-                     'lib/x86_64/libc++_shared.so',
-                     'lib/x86/libc++_shared.so',
-    ]
+    // 所有的CPU 类型
+    ndk_abiFilters_all = "armeabi,x86,x86_64,armeabi-v7a,arm64-v8a"
+    // 当前项目支持的CPU类型
+    ndk_abiFilters_project = "armeabi-v7a,arm64-v8a"
+    // 项目使用到的so
+    pickFirstList = ['libc++_shared.so']
 
     excludeList = [
-            'META-INF/*.kotlin_module',
-            'META-INF/proguard/androidx-annotations.pro',
-            'META-INF/proguard/coroutines.pro'
+        'META-INF/*.kotlin_module',
+        'META-INF/proguard/androidx-annotations.pro',
+        'META-INF/proguard/coroutines.pro'
     ]
-
-    doNotStripList = [
-            "*/armeabi-v7a/*.so"
-    ]
-
-    ndk_abiFilters = "armeabi-v7a,arm64-v8a"
-
 
     //签名信息
     signingConfigs = [
-            keyAlias        : 'androiddebugkey',
-            keyPassword     : 'android',
-            storeFile       : "./../debug.keystore",
-            storePassword   : 'android',
-            v1SigningEnabled: true,
-            v2SigningEnabled: true,
+        keyAlias        : 'androiddebugkey',
+        keyPassword     : 'android',
+        storeFile       : "./../debug.keystore",
+        storePassword   : 'android',
+        v1SigningEnabled: true,
+        v2SigningEnabled: true,
     ]
 
     //使用kotlin版本
