--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "LibAdapter"
+ext.developModule = "LibAdapter,LibViewExt,LibTextView"
 
 
 /**
@@ -627,7 +627,7 @@ ext.moduleInfo = [
         "apidependenciesList": [
             project.androidsupport.appcompat,
             project.androidsupport.constraintlayout,
-            "LibText"
+            "LibText","LibViewExt"
         ]
     ],
     "LibAceEditor"              : [
