优化下载日志，修复权限没有使用默认值

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibDownload,LibPermission"
 
 
 /**
@@ -35,7 +35,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "5.10.38"
+ext.moduleVersionName = "5.10.39"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -627,7 +627,7 @@ ext.moduleInfo = [
         "apidependenciesList": [
             project.androidsupport.appcompat,
             project.androidsupport.constraintlayout,
-            "LibText","LibViewExt"
+            "LibText", "LibViewExt"
         ]
     ],
     "LibAceEditor"              : [
