--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "LibDialog, LibDownload"
+ext.developModule = "Application"
 
 
 /**
@@ -506,7 +506,7 @@ ext.moduleInfo = [
         ]
     ],
     "LibDialog"                 : [
-        "version"            : "5.10.38",
+        "version"            : "5.10.44",
         "artifactId"         : "lib-dialog",
         "apidependenciesList": [
             project.androidsupport.constraintlayout,
