简单的消息公告，增加应用更新异常跳转到反馈， 修复应用下载的bug

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibDialog"
 
 
 /**
@@ -35,7 +35,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "5.10.54"
+ext.moduleVersionName = "5.10.55"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -84,7 +84,14 @@ ext.moduleInfo = [
         "apidependenciesList": [
             "CommonFeedback", "CommonWebview", "CommonSplash", "CommonPhotos",
             "CommonNetwork", "CommonPraise", "CommonAbout", "CommonList", "CommonAceEditor",
-            "CommonSvga", "CommonBottomTab", "CommonNavigationDrawer", "CommonShare"
+            "CommonSvga", "CommonBottomTab", "CommonNavigationDrawer", "CommonShare", "CommonMessage"
+        ]
+    ],
+    "CommonMessage"             : [
+        "version"            : "5.10.54",
+        "artifactId"         : "common-message",
+        "apidependenciesList": [
+            "Framework"
         ]
     ],
     "CommonShare"               : [
