增加空白的通用占位view

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibViewExt,LibCustomView"
 
 
 /**
@@ -35,7 +35,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "5.10.58"
+ext.moduleVersionName = "5.10.59"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -223,7 +223,7 @@ ext.moduleInfo = [
             "LibAdapter", "LibRefresh", "LibToast", "LibDialog", "LibNotification", "LibBottomTab",
             "LibRecycleviewExt", "LibTouchRegion", "LibViewExt", "LibWebview", "LibPermission",
             "LibImmersive", "LibFloatview", "LibTextView", "LibAceEditor", "LibViewPager",
-            "LibSvga", "LibAudioPlayer"
+            "LibSvga", "LibAudioPlayer","LibCustomView"
         ]
     ],
     "RouterAnnotation"          : [
@@ -683,6 +683,13 @@ ext.moduleInfo = [
         "artifactId"         : "lib-audio-player",
         "apidependenciesList": [
             "LibMedia", "LibBlockTask"
+        ]
+    ],
+    "LibCustomView"            : [
+        "version"            : "5.10.57",
+        "artifactId"         : "lib-custom-view",
+        "apidependenciesList": [
+            "LibTextView"
         ]
     ]
 ]
