--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -30,11 +30,19 @@
                 <category android:name="android.intent.category.BROWSABLE" />
                 <category android:name="android.intent.category.DEFAULT" />
 
-                <data android:scheme="https" android:host="*.ptlogin2.qq.com" />
+                <data
+                    android:host="*.ptlogin2.qq.com"
+                    android:scheme="https" />
 
             </intent-filter>
 
         </activity>
+
+        <activity
+            android:name="com.bihe0832.android.app.message.AAFMessageActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@style/AAF.ActivityTheme" />
 
     </application>
 </manifest>
