--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibTextView"
 
 
 /**
@@ -35,7 +35,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "5.10.59"
+ext.moduleVersionName = "5.11.0"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -91,7 +91,7 @@ ext.moduleInfo = [
         "version"            : "5.10.59",
         "artifactId"         : "common-message",
         "apidependenciesList": [
-            "Framework"
+            "CommonList"
         ]
     ],
     "CommonShare"               : [
