通用icon 整理，分享优化，新增分享APP（二维码或者文本均可）、修复文件操作的bug

--- a/CommonShare/src/main/AndroidManifest.xml
+++ b/CommonShare/src/main/AndroidManifest.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.bihe0832.android.common.share">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.bihe0832.android.common.share">
 
+    <application>
+        <activity
+            android:name="com.bihe0832.android.common.share.ShareAPPActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:theme="@style/AAF.ActivityTheme.Alpha" />
+    </application>
 </manifest>
