二维码识别、扫码、生成基础库完善，震动及音乐播放完善，分享优化，更具有扩展性，增加通过二维码分享链接。优化分享应用的逻辑、修复哀悼日与分辨率共用变量的bug、获取本地资源的bitmap优化、通用Icon 资源整理

--- a/CommonShare/src/main/AndroidManifest.xml
+++ b/CommonShare/src/main/AndroidManifest.xml
@@ -7,5 +7,9 @@
             android:name="com.bihe0832.android.common.share.ShareAPPActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:theme="@style/AAF.ActivityTheme.Alpha" />
+        <activity
+            android:name="com.bihe0832.android.common.share.ShareQRCodeActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:theme="@style/AAF.ActivityTheme.Alpha" />
     </application>
 </manifest>
