二维码扫描增加存储卡权限、权限bug 修复，lib获取权限清理、mac地址获取优化

--- a/CommonQRCode/src/main/AndroidManifest.xml
+++ b/CommonQRCode/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <application>
         <activity
-            android:name="com.google.zxing.activity.CaptureActivity"
+            android:name="com.bihe0832.android.common.qrcode.QrcodeScanActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:screenOrientation="portrait"
             android:theme="@style/AAF.ActivityTheme" />
