--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,8 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "LibMedia,LibDeviceNetwork"
+ext.developModule = "LibDeviceNetwork,LibPermission"
+
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
@@ -34,7 +35,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "5.12.0"
+ext.moduleVersionName = "5.12.1"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -91,7 +92,7 @@ ext.moduleInfo = [
         "version"            : "5.11.22",
         "artifactId"         : "common-qrcode",
         "apidependenciesList": [
-            "Framework"
+            "CommonPhotos"
         ]
     ],
     "CommonMessage"             : [
@@ -204,7 +205,7 @@ ext.moduleInfo = [
         ]
     ],
     "Framework"                 : [
-        "version"                : "5.11.22",
+        "version"                : "5.12.0",
         "artifactId"             : "framework",
         "apidependenciesList"    : [
             project.androidsupport.annotation,
