--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,16 +6,15 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "APPTest"
+ext.mainProject = "APPTest,CommonDebug"
 
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
- * 当前设计到Android Support库的有：
- *      LibDeviceNetwork,LibFile,LibFragmentation_core,LibFlycoTabLayout,LibQRCode,LibAdapter,LibDialog,LibBottomTab,LibViewExt,LibViewPager,LibImmersive,LibTextView
+ *
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibQRCode"
 
 
 /**
@@ -35,7 +34,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "5.12.2"
+ext.moduleVersionName = "5.12.3"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -75,7 +74,7 @@ ext.moduleInfo = [
         "version"            : "5.12.1",
         "artifactId"         : "common-debug",
         "apidependenciesList": [
-            "Framework", "CommonPraise", "CommonFeedback", "CommonList", "CommonAceEditor", "CommonNetwork"
+            "Framework", "CommonPraise", "CommonList", "CommonAceEditor","CommonWebview",  "LibDebug"
         ]
     ],
     "CommonWrapper"             : [
@@ -222,7 +221,7 @@ ext.moduleInfo = [
         "version"            : "5.12.1",
         "artifactId"         : "lib-wrapper",
         "apidependenciesList": [
-            "LibDebug",
+
             "LibCommonUtils", "LibChannel", "LibTimer", "LibRequest",
             "LibGson", "LibHttpAdvanced", "LibSqlite", "LibDeviceNetwork", "LibDownload", "LibInstall",
             "LibAPK", "LibTTS", "LibText", "LibSuperAPP", "LibOS", "LibZip", "LibLifecycle", "LibIPC",
