--- a/LibWrapper/src/main/AndroidManifest.xml
+++ b/LibWrapper/src/main/AndroidManifest.xml
@@ -1,27 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bihe0832.android.lib.wrapper">
+<manifest package="com.bihe0832.android.lib.wrapper">
     <!--    lib-download-install start  -->
-<!--    <uses-permission android:name="android.permission.INTERNET" />-->
-<!--    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />-->
+    <!--    <uses-permission android:name="android.permission.INTERNET" />-->
+    <!--    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />-->
     <!--    lib-download-install end  -->
 
     <!--    lib-file start   -->
-<!--    <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />-->
+    <!--    <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />-->
     <!--    lib-file end  -->
 
-    <!--    lib-qrcode start -->
-<!--    <uses-permission android:name="android.permission.VIBRATE" /> &lt;!&ndash; 震动权限 &ndash;&gt;-->
-<!--    <uses-permission android:name="android.permission.CAMERA" /> &lt;!&ndash; 摄像头权限 &ndash;&gt;-->
-<!--    <uses-feature android:name="android.hardware.camera.autofocus" /> &lt;!&ndash; 自动聚焦权限 &ndash;&gt;-->
-    <!--    lib-qrcode end  -->
-
     <!--    lib-webview start -->
-<!--    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />-->
-<!--    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />-->
-<!--    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />-->
-<!--    <uses-permission android:name="android.permission.INTERNET" />-->
-<!--    <uses-permission android:name="android.permission.READ_PHONE_STATE" />-->
+    <!--    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />-->
+    <!--    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />-->
+    <!--    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />-->
+    <!--    <uses-permission android:name="android.permission.INTERNET" />-->
+    <!--    <uses-permission android:name="android.permission.READ_PHONE_STATE" />-->
     <!--    lib-webview end  -->
 </manifest>
 
