--- a/CommonQRCode/src/main/AndroidManifest.xml
+++ b/CommonQRCode/src/main/AndroidManifest.xml
@@ -9,5 +9,10 @@
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:screenOrientation="portrait"
             android:theme="@style/AAF.ActivityTheme" />
+
+        <activity
+            android:name="com.bihe0832.android.common.qrcode.QrcodeWithResultActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:theme="@style/AAF.ActivityTheme.Fullscreen" />
     </application>
 </manifest>
