--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -14,7 +14,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "Router"
 
 
 /**
@@ -34,7 +34,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "5.12.8"
+ext.moduleVersionName = "5.12.9"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -111,7 +111,7 @@ ext.moduleInfo = [
     "CommonNavigationDrawer"    : [
         "version"            : "5.12.8",
         "artifactId"         : "common-navigation-drawer",
-        "apidependenciesList": ["CommonList", "CommonAbout", "CommonMessage"]
+        "apidependenciesList": ["CommonList", "CommonAbout", "CommonMessage", "CommonQRCode"]
     ],
     "CommonBottomTab"           : [
         "version"            : "5.12.8",
