扫码增加返回按钮，改为全屏；权限增加打印所有配置的接口方便后续调试

--- a/CommonQRCode/src/main/AndroidManifest.xml
+++ b/CommonQRCode/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
             android:name="com.bihe0832.android.common.qrcode.QrcodeScanActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:screenOrientation="portrait"
-            android:theme="@style/AAF.ActivityTheme" />
+            android:theme="@style/AAF.ActivityTheme.Fullscreen" />
 
         <activity
             android:name="com.bihe0832.android.common.qrcode.QrcodeWithResultActivity"
