--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -14,7 +14,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibCommonUtils,LibCustomView,LibMedia,LibViewExt,LibAAFResource,LibAceEditor,LibBottomTab"
 
 
 /**
@@ -34,7 +34,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "5.13.1"
+ext.moduleVersionName = "5.14.0"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -216,7 +216,7 @@ ext.moduleInfo = [
             "LibAdapter", "LibRefresh", "LibToast", "LibDialog", "LibNotification", "LibBottomTab",
             "LibRecycleviewExt", "LibTouchRegion", "LibViewExt", "LibWebview", "LibPermission",
             "LibImmersive", "LibFloatview", "LibTextView", "LibAceEditor", "LibViewPager",
-            "LibSvga", "LibAudioPlayer", "LibCustomView", "LibAAFResource"]
+            "LibSvga", "LibAudioPlayer", "LibCustomView", "LibAAFResource", "LibTheme"]
     ],
     "RouterAnnotation"          : [
         "version"            : "4.1.0",
@@ -507,7 +507,7 @@ ext.moduleInfo = [
         "apidependenciesList": [
             project.androidsupport.constraintlayout,
             "LibThread", "LibMedia", "LibOS", "LibAAFResource", "LibText", "LibViewExt",
-            "LibBlockTask"
+            "LibBlockTask", "LibTheme"
         ]
     ],
     "LibNotification"           : [
@@ -530,7 +530,8 @@ ext.moduleInfo = [
         "version"            : "5.13.1",
         "artifactId"         : "lib-recycleview-ext",
         "apidependenciesList": [
-            "LibRefresh"]
+            "LibRefresh","LibTheme"
+        ]
     ],
     "LibTouchRegion"            : [
         "version"            : "5.13.1",
@@ -623,7 +624,7 @@ ext.moduleInfo = [
         "apidependenciesList": [
             project.androidsupport.appcompat,
             project.androidsupport.constraintlayout,
-            "LibText", "LibViewExt"
+            "LibText", "LibTheme"
         ]
     ],
     "LibAceEditor"              : [
@@ -678,14 +679,24 @@ ext.moduleInfo = [
         "version"            : "5.13.1",
         "artifactId"         : "lib-custom-view",
         "apidependenciesList": [
-            "LibTextView"
+            project.androidsupport.appcompat,
+            project.androidsupport.constraintlayout,
+            "LibViewExt"
         ]
     ],
     "LibAAFResource"            : [
         "version"            : "5.13.1",
         "artifactId"         : "lib-aaf-res",
         "apidependenciesList": [
-            ""
+
+        ]
+    ],
+    "LibTheme"                  : [
+        "version"            : "5.12.16",
+        "artifactId"         : "lib-theme",
+        "apidependenciesList": [
+            project.androidsupport.androidxcore,
+            "LibConfig", "LibCustomView"
         ]
     ]
 ]
