换肤提升到永久调试

--- a/BaseDebug/src/main/AndroidManifest.xml
+++ b/BaseDebug/src/main/AndroidManifest.xml
@@ -110,7 +110,7 @@
             android:theme="@style/AAF.ActivityTheme.Alpha" />
 
         <activity
-            android:name="com.bihe0832.android.base.debug.skin.SkinActivity"
+            android:name="com.bihe0832.android.base.debug.theme.ThemeActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:theme="@style/AAF.ActivityTheme" />
 
