--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -14,7 +14,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibFloatview"
 
 
 /**
@@ -34,7 +34,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "5.14.1"
+ext.moduleVersionName = "5.15.0"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -84,7 +84,14 @@ ext.moduleInfo = [
             "CommonFeedback", "CommonWebview", "CommonSplash", "CommonPhotos",
             "CommonNetwork", "CommonPraise", "CommonAbout", "CommonList", "CommonAceEditor",
             "CommonSvga", "CommonBottomTab", "CommonNavigationDrawer", "CommonShare", "CommonMessage",
-            "CommonQRCode"
+            "CommonQRCode","CommonAccessibility"
+        ]
+    ],
+    "CommonAccessibility"              : [
+        "version"            : "5.14.0",
+        "artifactId"         : "common-accessibility",
+        "apidependenciesList": [
+            "Framework"
         ]
     ],
     "CommonQRCode"              : [
