敏感权限从基础库上移到业务

--- a/LibDialog/src/main/AndroidManifest.xml
+++ b/LibDialog/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
 
-        package="com.bihe0832.android.lib.ui.dialog">
+    package="com.bihe0832.android.lib.ui.dialog">
 
-    <uses-permission android:name="android.permission.INSTALL_PACKAGES" />
 
 </manifest>
