构建脚本优化

--- a/APPTest/build.gradle
+++ b/APPTest/build.gradle
@@ -65,6 +65,7 @@ android {
         }
     }
 
+    archivesBaseName = applicationPrefix + "_V${defaultConfig.versionName}_${defaultConfig.versionCode}"
 
     buildTypes {
         debug {
@@ -78,17 +79,6 @@ android {
             minifyEnabled project.minifyEnabled as boolean
             proguardFiles "./../proguard-rules-common.pro"
             shrinkResources false
-        }
-    }
-
-    android.applicationVariants.all { variant ->
-        def finalFileName = applicationPrefix + "_V${defaultConfig.versionName}_${defaultConfig.versionCode}"
-        variant.outputs.all {
-            if (variant.buildType.name == 'debug') {
-                outputFileName = finalFileName + "_debug.apk"
-            } else {
-                outputFileName = finalFileName + "_release.apk"
-            }
         }
     }
 }
